<resources>
    <string name="app_name">Notif Listener</string>
    <string name="label_server_url">Server URL (e.g. http://192.168.1.10:5000)</string>
    <string name="label_api_key">API Key</string>
    <string name="label_device_label">Device label</string>
    <string name="action_save">Save</string>
    <string name="action_open_notification_settings">Grant notification access</string>
    <string name="status_access_granted">Notification access: granted</string>
    <string name="status_access_denied">Notification access: not granted</string>
    <string name="status_saved">Settings saved</string>
</resources>
